--- a/src/IckleNote.ini
+++ b/src/IckleNote.ini
@@ -1,16 +1,23 @@
 [Placement]
-Top=0
-Left=-9
-Width=1436
-Height=1651
-Split=322
+Top=100
+Left=100
+Width=1303
+Height=883
+Split=368
 
 [Options]
 AutoSave=0
 WordWrap=1
 
-[Font]
-Name=Consolas
+[PlainTextFont]
+Name=Courier New
+CharSet=0
+Color=0
+Size=12
+Style=0
+
+[FileListFont]
+Name=Courier New
 CharSet=0
 Color=0
 Size=12
