--- a/Windows exe/IckleNote.ini
+++ b/Windows exe/IckleNote.ini
@@ -1,15 +1,22 @@
 [Placement]
-Top=1032
-Left=41
-Width=1234
-Height=949
+Top=100
+Left=100
+Width=1303
+Height=883
 Split=368
 
 [Options]
 AutoSave=0
 WordWrap=1
 
-[Font]
+[PlainTextFont]
+Name=Courier New
+CharSet=0
+Color=0
+Size=12
+Style=0
+
+[FileListFont]
 Name=Courier New
 CharSet=0
 Color=0
